[gd_scene load_steps=4 format=3 uid="uid://n5gjwvmt6y6d"]

[ext_resource type="Script" path="res://turret_for_player_two.gd" id="1_0cysd"]
[ext_resource type="Texture2D" uid="uid://ccu2evycb2xuf" path="res://icon.svg" id="2_b2qpd"]
[ext_resource type="AudioStream" uid="uid://ch0yyalwnnkmc" path="res://Sounds/Single_gunshot.mp3" id="3_pxh0b"]

[node name="Player2Turret" type="Node2D"]
rotation = -1.5708
script = ExtResource("1_0cysd")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_b2qpd")

[node name="BulletFireTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="SingleGunshot" type="AudioStreamPlayer" parent="AudioListener2D"]
stream = ExtResource("3_pxh0b")

[connection signal="timeout" from="BulletFireTimer" to="." method="_on_bullet_fire_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
